@@ -1,3 +1,9 @@
+2005-06-24 Andrew Ruder <aeruder@ksu.edu>
+ * GNUstepOutput: There was a bug in the sorting code for the userlist.
+ 
+ The place for typing will now retain it's position when tabs are changed/
+ windows are taken from being key.
+
 2005-06-22 Andrew Ruder <aeruder@ksu.edu>
  * IRCSwarm: Updating to allow time constraints (to adjust time between
  events) and correct case on nicknames.
